update env example

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,12 @@
 # Drizzle
 DATABASE_URL="file:./db.sqlite"
 
+SINGLESTORE_USER="username"
+SINGLESTORE_PASS="password"
+SINGLESTORE_HOST="example.svc.singlestore.com"
+SINGLESTORE_PORT="3333"
+SINGLESTORE_DB_NAME="example"
+
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
