--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,13 @@ SINGLESTORE_HOST="example.svc.singlestore.com"
 SINGLESTORE_PORT="3333"
 SINGLESTORE_DB_NAME="example"
 
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_..."
+CLERK_SECRET_KEY="sk_test_..."
+
+UPLOADTHING_TOKEN="ashsia...."
+
+NEXT_PUBLIC_POSTHOG_KEY="phc_..."
+
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
